--- a/Electric_Charging_Stations/templates/login.html
+++ b/Electric_Charging_Stations/templates/login.html
@@ -19,23 +19,14 @@
     </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
-                <li class="nav-item active dropdown">
-                    <!--create dropdown button-->
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="flase">Plots</a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="Resources/assets/images/Fig1.png" target = "_blank">Max Temperature</a>
-                        <a class="dropdown-item" href="Resources/assets/images/Fig2.png" target = "_blank">Humidity</a>
-                        <a class="dropdown-item" href="Resources/assets/images/Fig3.png" target = "_blank">Cloudiness</a>
-                        <a class="dropdown-item" href="Resources/assets/images/Fig4.png" target = "_blank">Wind Speed</a>
-                    </div>
+                <li class="nav-item active">
+                    <a class="nav-link" href="/add">Add a New Location</a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="
-                    
-                    comparison.html">Comparison</a>
+                    <a class="nav-link" href="/search">Search Nearby</a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="data.html">Data</a>
+                    <a class="nav-link" href="/login">LOGIN</a>
                 </li>
             </ul>
         </div>
