index and add V1
worked on index and add html files

--- a/Electric_Charging_Stations/templates/login.html
+++ b/Electric_Charging_Stations/templates/login.html
@@ -20,13 +20,13 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="/add">Add a New Location</a>
+                    <a class="nav-link" href="add.html">Add a New Location</a>
                 </li>
                 <li class="nav-item active">
                     <a class="nav-link" href="/search">Search Nearby</a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="/login">LOGIN</a>
+                    <a class="nav-link" href="login.html">LOGIN</a>
                 </li>
             </ul>
         </div>
