--- a/Electric_Charging_Stations/templates/Add.html
+++ b/Electric_Charging_Stations/templates/Add.html
@@ -21,14 +21,113 @@
     <link rel="stylesheet" type="text/css" href="https://unpkg.com/leaflet.markercluster@1.0.3/dist/MarkerCluster.Default.css">
 
     <!-- Our CSS -->
-    <link rel="stylesheet" type="text/css" href="static/css/style.css">
+    <link rel="stylesheet" type="text/css" href="../static/css/style.css">
+
 
   </head>
+
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+  crossorigin="anonymous">
   <body>
 
-    <div id="map"></div>
+    <nav class="navbar navbar-expand-lg"> <!--navigation bar-->
+      <a class="navbar-brand" href="index.html">GreenCharging</a>
+
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <ul class="navbar-nav mr-auto">
+                  <li class="nav-item active">
+                      <a class="nav-link" href="add.html">Add a New Location</a>
+                  </li>
+                  <li class="nav-item active">
+                      <a class="nav-link" href="/search">Search Nearby</a>
+                  </li>
+                  <li class="nav-item active">
+                      <a class="nav-link" href="login.html">LOGIN</a>
+                  </li>
+              </ul>
+          </div>
+      </nav>
+    <div class="container">
+      <div class="jumbotron" style="text-align: center">
+          <h1>New Station</h1>
+          <p>Enter your new Electirc station  details below!</p>
+      </div>
+      <div class="row">
+          <div class="col-md-offset-2 col-md-8">
+              <form method="POST" action="/send" role="form", name="petform">
+
+                  <!-- <div class="form-group">
+                      <label for="operatortitle">Operator Name</label>
+                      <input type="text" class="form-control" id="operatortitle" name="Operator_Name" placeholder="Operator">
+                  </div>
+
+                  <div class="form-group">
+                      <label for="operatorid">Operator ID</label>
+                      <input type="text" class="form-control" id="operatorid" placeholder="ID">
+                  </div>
+
+                  <div class="form-group">
+                    <label for="usagecost">Usage Cost</label>
+                    <input type="text" class="form-control" id="usagecost" placeholder="Cost">
+                  </div> -->
+
+                  <div class="form-group">
+                    <label for="addresstitle">Address Title</label>
+                    <input type="text" class="form-control" id="addresstitle" name="Title" placeholder="Address title">
+                  </div>
+
+                  <div class="form-group">
+                    <label for="address">Address</label>
+                    <input type="text" class="form-control" id="address" name="Address" placeholder="Address">
+                  </div>
+
+                  <div class="form-group">
+                    <label for="town">Town</label>
+                    <input type="text" class="form-control" id="town" name="town" placeholder="Town">
+                  </div>
+
+                  <div class="form-group">
+                    <label for="state">Province</label>
+                    <input type="text" class="form-control" id="state" name="state" placeholder="Province">
+                  </div>
+
+                  <!-- <div class="form-group">
+                    <label for="country">Country</label>
+                    <input type="text" class="form-control" id="country" name="country" placeholder="Country">
+                  </div> -->
+
+                  <div class="form-group">
+                    <label for="Lat">Latitude</label>
+                    <input type="text" class="form-control" id="Lat" name="Lat" placeholder="Latitude">
+                  </div>
+                
+                  <div class="form-group">
+                      <label for="Lon">Longitude</label>
+                      <input type="text" class="form-control" id="Lon" name="Lon" placeholder="Longitude">
+                  </div>
+
+                  <div class="form-group">
+                    <label for="connectionTitle">Plug Type</label>
+                    <input type="text" class="form-control" id="connectionTitle" name="Plug_type" placeholder="Connection Title">
+                  </div>
+
+                  <div class="form-group">
+                  <label for="levelID">Level ID</label>
+                  <input type="text" class="form-control" id="levelID" name="Level" placeholder="Level ID">
+                  </div>
+
+                  <input type="submit" value="submit" class="btn btn-default">
+              </form>
+          </div>
+      </div>
+
+  </div>
+    
+    <!-- <div id="map"></div>
     <script type="text/javascript" src="static/js/config.js"></script>
-    <script type="text/javascript" src="static/js/logic.js"></script>
+    <script type="text/javascript" src="static/js/logic.js"></script> -->
 
   </body>
+
+  
 </html>
