Added additional css styling. Changed a larger homepage image

--- a/Electric_Charging_Stations/templates/index.html
+++ b/Electric_Charging_Stations/templates/index.html
@@ -2,19 +2,22 @@
 <html lang="en">
 ​
 <head>
-    <title>Latittude Visualization Dashboard </title>
+    <title>Green Charging</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    <link rel="stylesheet" type="text/css" href="index_page.css">
+    <link rel="stylesheet" type="text/css" href="../static/css/navbar.css">
+    <link rel="stylesheet" type="text/css" href="../static/css/media.css">
+    <link rel="stylesheet" type="text/css" href="../static/css/index.css">
 </head>
 ​
 <body>
     <nav class="navbar navbar-expand-lg"> <!--navigation bar-->
-    <button class="navbar-toggler custom-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
+        <a class="navbar-brand" href="index.html">GreenCharging</a>
+        <button class="navbar-toggler custom-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
@@ -35,13 +38,12 @@
             <div class = "col-lg-8 col-md-12 col-sm-12 col-xs-12">
                 <h1 class = "header-1">
                     Welcome to Electric Charging Stations
-
-                    <img src= "assets/img/electric_car.jpg"
-                    style="width:300px;height:221px";hspace="100">
                 </h1>
                 
                 <hr class="my-4">
-                               <!-- </div> -->
+                <div class = "img" style="max-width : 1000px; max-height: 1000px">
+                <img class = "center-fit" src= "../assets/img/homepage_img.jpg">
+                </div> 
                 <div class="text">
                     <p>
                         An electric vehicle, also called an EV, uses one or more electric motors or 
@@ -50,19 +52,17 @@
                         with a battery, solar panels or an electric generator to convert fuel to electricity. 
                         EVs include, but are not limited to, road and rail vehicles, surface and underwater vessels, electric aircraft and electric spacecraft.
                     </p>
-                    <p>
-                        History:
-                    </p>
-                    <p>
+                    <p><strong>History:</strong>
+                        <br>
                         Electric motive power started in 1827, when Hungarian priest Ányos Jedlik built the first crude but viable electric motor, provided with stator, rotor and commutator, and the year after he used it to power a tiny car.
                         A few years later, in 1835, professor Sibrandus Stratingh of the University of Groningen, the Netherlands, built a small-scale electric car, and between 1832 and 1839 (the exact year is uncertain), Robert Anderson of Scotland invented the first crude electric carriage, powered by non-rechargeable primary cells.
                         Around the same period, early experimental electrical cars were moving on rails, too. American blacksmith and inventor Thomas Davenport built a toy electric locomotive, powered by a primitive electric motor, in 1835. In 1838, a Scotsman named Robert Davidson built an electric locomotive that attained a speed of four miles per hour (6 km/h). In England a patent was granted in 1840 for the use of rails as conductors of electric current, and similar American patents were issued to Lilley and Colten in 1847.
-                        </p>
+                    </p>
                 </div>
                 
             </div>
             <div class = "col-lg-4 col-md-12 col-sm-12 col-xs-12">
-                <h2 class = "header-4">
+                <h2 class = "header-2">
                     More info
                 </h2>
                 <hr class="my-4">
