--- a/Electric_Charging_Stations/templates/Add.html
+++ b/Electric_Charging_Stations/templates/Add.html
@@ -1,133 +1,96 @@
 <!DOCTYPE html>
 <html lang="en-us">
-  <head>
-    <meta charset="UTF-8">
-    <title>Marker Clusters</title>
 
-    <!-- Leaflet JS & CSS -->
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.3/dist/leaflet.css"
-    integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ=="
-    crossorigin=""/>
-    <script src="https://unpkg.com/leaflet@1.3.3/dist/leaflet.js"
-    integrity="sha512-tAGcCfR4Sc5ZP5ZoVz0quoZDYX5aCtEm/eu1KhSLj2c9eFrylXZknQYmxUssFaVJKvvc0dJQixhGjG2yXWiV9Q=="
-    crossorigin=""></script>
+<head>
+  <title>Green Charging</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+  <link rel="stylesheet" type="text/css" href="../static/css/navbar.css">
+  <link rel="stylesheet" type="text/css" href="../static/css/addpage.css">
+  <link rel="stylesheet" type="text/css" href="../static/css/media.css">
+</head>
 
-    <!-- d3 JS -->
-    <script src="https://d3js.org/d3.v4.min.js"></script>
+<body>
+  <nav class="navbar navbar-expand-lg"> <!--navigation bar-->
+    <a class="navbar-brand" href="index.html">GreenCharging</a>
+    <button class="navbar-toggler custom-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+                <a class="nav-link" href="add.html">Add a New Location</a>
+            </li>
+            <li class="nav-item active">
+                <a class="nav-link" href="/search">Search Nearby</a>
+            </li>
+            <li class="nav-item active">
+                <a class="nav-link" href="login.html">LOGIN</a>
+            </li>
+        </ul>
+    </div>
+  </nav>
+  <div class="container">
+    <div class="jumbotron" style="text-align: center">
+        <h1>New Station</h1>
+        <p>Enter your new Electirc station  details below!</p>
+    </div>
+    <div class="row">
+        <div class="col-md-offset-2 col-md-8">
+          <form method="POST" action="/add" role="form", name="locationform">
+            <div class="form-group">
+              <label for="addresstitle">Address Title</label>
+              <input type="text" class="form-control" id="addresstitle" name="Title" placeholder="Address title">
+            </div>
 
-    <!-- Marker Cluster JS & CSS -->
-    <script type="text/javascript" src="https://unpkg.com/leaflet.markercluster@1.0.3/dist/leaflet.markercluster.js"></script>
-    <link rel="stylesheet" type="text/css" href="https://unpkg.com/leaflet.markercluster@1.0.3/dist/MarkerCluster.css">
-    <link rel="stylesheet" type="text/css" href="https://unpkg.com/leaflet.markercluster@1.0.3/dist/MarkerCluster.Default.css">
+            <div class="form-group">
+              <label for="address">Address</label>
+              <input type="text" class="form-control" id="address" name="Address" placeholder="Address">
+            </div>
 
-    <!-- Our CSS -->
-    <link rel="stylesheet" type="text/css" href="../static/css/style.css">
+            <div class="form-group">
+              <label for="town">Town</label>
+              <input type="text" class="form-control" id="town" name="town" placeholder="Town">
+            </div>
 
+            <div class="form-group">
+              <label for="state">Province</label>
+              <input type="text" class="form-control" id="state" name="state" placeholder="Province">
+            </div>
+            <div class="form-group">
+              <label for="Lat">Latitude</label>
+              <input type="text" class="form-control" id="Lat" name="Lat" placeholder="Latitude">
+            </div>
+          
+            <div class="form-group">
+                <label for="Lon">Longitude</label>
+                <input type="text" class="form-control" id="Lon" name="Lon" placeholder="Longitude">
+            </div>
 
-  </head>
+            <div class="form-group">
+              <label for="connectionTitle">Plug Type</label>
+              <input type="text" class="form-control" id="connectionTitle" name="Plug_type" placeholder="Connection Title">
+            </div>
 
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
-  crossorigin="anonymous">
-  <body>
+            <div class="form-group">
+            <label for="levelID">Level ID</label>
+            <input type="text" class="form-control" id="levelID" name="Level" placeholder="Level ID">
+            </div>
 
-    <nav class="navbar navbar-expand-lg"> <!--navigation bar-->
-      <a class="navbar-brand" href="index.html">GreenCharging</a>
+            <input type="submit" value="submit" class="btn btn-default">
+        </form>
+        </div>
+    </div>
 
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-              <ul class="navbar-nav mr-auto">
-                  <li class="nav-item active">
-                      <a class="nav-link" href="add.html">Add a New Location</a>
-                  </li>
-                  <li class="nav-item active">
-                      <a class="nav-link" href="/search">Search Nearby</a>
-                  </li>
-                  <li class="nav-item active">
-                      <a class="nav-link" href="login.html">LOGIN</a>
-                  </li>
-              </ul>
-          </div>
-      </nav>
-    <div class="container">
-      <div class="jumbotron" style="text-align: center">
-          <h1>New Station</h1>
-          <p>Enter your new Electirc station  details below!</p>
-      </div>
-      <div class="row">
-          <div class="col-md-offset-2 col-md-8">
-              <form method="POST" action="/send" role="form", name="petform">
+</div>
+  
+  <!-- <div id="map"></div>
+  <script type="text/javascript" src="static/js/config.js"></script>
+  <script type="text/javascript" src="static/js/logic.js"></script> -->
 
-                  <!-- <div class="form-group">
-                      <label for="operatortitle">Operator Name</label>
-                      <input type="text" class="form-control" id="operatortitle" name="Operator_Name" placeholder="Operator">
-                  </div>
-
-                  <div class="form-group">
-                      <label for="operatorid">Operator ID</label>
-                      <input type="text" class="form-control" id="operatorid" placeholder="ID">
-                  </div>
-
-                  <div class="form-group">
-                    <label for="usagecost">Usage Cost</label>
-                    <input type="text" class="form-control" id="usagecost" placeholder="Cost">
-                  </div> -->
-
-                  <div class="form-group">
-                    <label for="addresstitle">Address Title</label>
-                    <input type="text" class="form-control" id="addresstitle" name="Title" placeholder="Address title">
-                  </div>
-
-                  <div class="form-group">
-                    <label for="address">Address</label>
-                    <input type="text" class="form-control" id="address" name="Address" placeholder="Address">
-                  </div>
-
-                  <div class="form-group">
-                    <label for="town">Town</label>
-                    <input type="text" class="form-control" id="town" name="town" placeholder="Town">
-                  </div>
-
-                  <div class="form-group">
-                    <label for="state">Province</label>
-                    <input type="text" class="form-control" id="state" name="state" placeholder="Province">
-                  </div>
-
-                  <!-- <div class="form-group">
-                    <label for="country">Country</label>
-                    <input type="text" class="form-control" id="country" name="country" placeholder="Country">
-                  </div> -->
-
-                  <div class="form-group">
-                    <label for="Lat">Latitude</label>
-                    <input type="text" class="form-control" id="Lat" name="Lat" placeholder="Latitude">
-                  </div>
-                
-                  <div class="form-group">
-                      <label for="Lon">Longitude</label>
-                      <input type="text" class="form-control" id="Lon" name="Lon" placeholder="Longitude">
-                  </div>
-
-                  <div class="form-group">
-                    <label for="connectionTitle">Plug Type</label>
-                    <input type="text" class="form-control" id="connectionTitle" name="Plug_type" placeholder="Connection Title">
-                  </div>
-
-                  <div class="form-group">
-                  <label for="levelID">Level ID</label>
-                  <input type="text" class="form-control" id="levelID" name="Level" placeholder="Level ID">
-                  </div>
-
-                  <input type="submit" value="submit" class="btn btn-default">
-              </form>
-          </div>
-      </div>
-
-  </div>
-    
-    <!-- <div id="map"></div>
-    <script type="text/javascript" src="static/js/config.js"></script>
-    <script type="text/javascript" src="static/js/logic.js"></script> -->
-
-  </body>
+</body>
 
   
 </html>
