--- a/Electric_Charging_Stations/templates/Add.html
+++ b/Electric_Charging_Stations/templates/Add.html
@@ -38,45 +38,45 @@
         <p>Enter your new Electirc station  details below!</p>
     </div>
     <div class="row">
-        <div class="col-md-offset-2 col-md-8">
+        <div class="col-12">
           <form method="POST" action="/add" role="form", name="locationform">
             <div class="form-group">
-              <label for="addresstitle">Address Title</label>
-              <input type="text" class="form-control" id="addresstitle" name="Title" placeholder="Address title">
+              <label for="addresstitle"><strong>Station Name</strong></label>
+              <input type="text" class="form-control" id="addresstitle" name="Title" placeholder="UofT Charging Station">
             </div>
 
             <div class="form-group">
-              <label for="address">Address</label>
-              <input type="text" class="form-control" id="address" name="Address" placeholder="Address">
+              <label for="address"><strong>Address</strong></label>
+              <input type="text" class="form-control" id="address" name="Address" placeholder="35 St George Street">
             </div>
 
             <div class="form-group">
-              <label for="town">Town</label>
-              <input type="text" class="form-control" id="town" name="town" placeholder="Town">
+              <label for="town"><strong>City</strong></label>
+              <input type="text" class="form-control" id="town" name="town" placeholder="Toronto">
             </div>
 
             <div class="form-group">
-              <label for="state">Province</label>
-              <input type="text" class="form-control" id="state" name="state" placeholder="Province">
+              <label for="state"><strong>Province</strong></label>
+              <input type="text" class="form-control" id="state" name="state" placeholder="Ontario">
             </div>
             <div class="form-group">
-              <label for="Lat">Latitude</label>
-              <input type="text" class="form-control" id="Lat" name="Lat" placeholder="Latitude">
+              <label for="Lat"><strong>Latitude</strong></label>
+              <input type="text" class="form-control" id="Lat" name="Lat" placeholder="43">
             </div>
           
             <div class="form-group">
-                <label for="Lon">Longitude</label>
-                <input type="text" class="form-control" id="Lon" name="Lon" placeholder="Longitude">
+                <label for="Lon"><strong>Longitude</strong></label>
+                <input type="text" class="form-control" id="Lon" name="Lon" placeholder="-79">
             </div>
 
             <div class="form-group">
               <label for="connectionTitle">Plug Type</label>
-              <input type="text" class="form-control" id="connectionTitle" name="Plug_type" placeholder="Connection Title">
+              <input type="text" class="form-control" id="connectionTitle" name="Plug_type" placeholder="Tesla Model (x/m)">
             </div>
 
             <div class="form-group">
             <label for="levelID">Level ID</label>
-            <input type="text" class="form-control" id="levelID" name="Level" placeholder="Level ID">
+            <input type="text" class="form-control" id="levelID" name="Level" placeholder="1, 2 or 3">
             </div>
 
             <input type="submit" value="submit" class="btn btn-default">
