--- a/Electric_Charging_Stations/templates/Add.html
+++ b/Electric_Charging_Stations/templates/Add.html
@@ -70,12 +70,12 @@
             </div>
 
             <div class="form-group">
-              <label for="connectionTitle">Plug Type</label>
-              <input type="text" class="form-control" id="connectionTitle" name="Plug_type" placeholder="Tesla Model (x/m)">
+              <label for="connectionTitle"><strong>Connection Type</strong></label>
+              <input type="text" class="form-control" id="connectionTitle" name="Plug_type" placeholder="Tesla Supercharger">
             </div>
 
             <div class="form-group">
-            <label for="levelID">Level ID</label>
+            <label for="levelID"><strong>Connection Type</strong></label>
             <input type="text" class="form-control" id="levelID" name="Level" placeholder="1, 2 or 3">
             </div>
 
