Fixed the moble display bugs, when it is xs screen, the column didn't show as col-12, but overlaping each other. Fixed by import index.css first and then import media.css

--- a/Electric_Charging_Stations/templates/index.html
+++ b/Electric_Charging_Stations/templates/index.html
@@ -8,8 +8,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <link rel="stylesheet" type="text/css" href="../static/css/navbar.css">
-    <link rel="stylesheet" type="text/css" href="../static/css/media.css">
     <link rel="stylesheet" type="text/css" href="../static/css/index.css">
+    <link rel="stylesheet" type="text/css" href="../static/css/media.css">
 </head>
 ​
 <body>
@@ -41,8 +41,8 @@
                 </h1>
                 
                 <hr class="my-4">
-                <div class = "img" style="max-width : 1000px; max-height: 1000px">
-                <img class = "center-fit" src= "../assets/img/homepage_img.jpg">
+                <div class = "img" style="max-width : 1500px">
+                    <img class = "center-fit" src= "../assets/img/homepage_img.jpg">
                 </div> 
                 <div class="text">
                     <p>
@@ -59,7 +59,6 @@
                         Around the same period, early experimental electrical cars were moving on rails, too. American blacksmith and inventor Thomas Davenport built a toy electric locomotive, powered by a primitive electric motor, in 1835. In 1838, a Scotsman named Robert Davidson built an electric locomotive that attained a speed of four miles per hour (6 km/h). In England a patent was granted in 1840 for the use of rails as conductors of electric current, and similar American patents were issued to Lilley and Colten in 1847.
                     </p>
                 </div>
-                
             </div>
             <div class = "col-lg-4 col-md-12 col-sm-12 col-xs-12">
                 <h2 class = "header-2">
