Fixed index.html navbar not toggling on top of the page. Rename Filter.html to search.html

--- a/Electric_Charging_Stations/static/css/navbar.css
+++ b/Electric_Charging_Stations/static/css/navbar.css
@@ -1,6 +1,6 @@
 .navbar {
     padding : 1px;
-    margin-top:0;
+    margin-top: 0;
     margin-bottom:0;
     margin-left:2px;
     margin-right:2px;
@@ -40,4 +40,7 @@
   
 .nav-link {
     color : #000000;
+    font-family: "Roboto", sans-serif;
+    width: 100%;
+    box-sizing: border-box;
 }
