Added divisions for bar and pie plots in index.html

--- a/Electric_Charging_Stations/templates/index.html
+++ b/Electric_Charging_Stations/templates/index.html
@@ -69,8 +69,14 @@
                             <li><a href="../assets/img/plug_types.png" target = "_blank">Plug Types</a></li>
                         </ul>
                     </div>
+                    <div id= "bar"></div>
+                    <div id= "pie"></div>
                 </div>
             </div>
         </div>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.js"></script>
+        <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+        <script src="static/js/bar.js"></script>
+        <script src="static/js/pie.js"></script>
     </body>
 </html
