Changed li css style in index.html, added search.css style sheet, modified index.html and search.html
Added a search button in search.html, when onclicck, it will ask for user's current locatioin and plot the map with user location in center of the map

--- a/Electric_Charging_Stations/static/css/index.css
+++ b/Electric_Charging_Stations/static/css/index.css
@@ -54,3 +54,10 @@ body {
     position : absolute;
     right : 3%;
 }
+
+li {
+    display: block;
+    font-size: large;
+    font-family: "Impact", Charcoal, sans-serif;
+    color : black;
+}
