--- a/Electric_Charging_Stations/templates/index.html
+++ b/Electric_Charging_Stations/templates/index.html
@@ -23,7 +23,7 @@
                         <a class="nav-link" href="add.html">Add a New Location</a>
                     </li>
                     <li class="nav-item active">
-                        <a class="nav-link" href="/search">Search Nearby</a>
+                        <a class="nav-link" onclick="getLocation()" href="search.html">Search Nearby</a>
                     </li>
                     <li class="nav-item active">
                         <a class="nav-link" href="login.html">LOGIN</a>
@@ -60,13 +60,13 @@
                 </div>
                 <div class = "col-lg-4 col-md-12 col-sm-12 col-xs-12">
                     <h2 class = "header-2">
-                        More info
+                        Relevant infomation
                     </h2>
                     <hr class="my-4">
                     <div class = "images">
                         <ul>
-                            <li><a href="../assets/img/power_types.png" target = "_blank">Power Types</a></li>
-                            <li><a href="../assets/img/plug_types.png" target = "_blank">Plug Types</a></li>
+                            <li><a href="../assets/img/power_types.png" target = "_blank">Power Levels</a></li>
+                            <li><a href="../assets/img/plug_types.png" target = "_blank">Connection Types</a></li>
                         </ul>
                     </div>
                     <div id= "bar"></div>
