--- a/Electric_Charging_Stations/static/css/search.css
+++ b/Electric_Charging_Stations/static/css/search.css
@@ -1,3 +1,30 @@
 body {
     background-color : rgb(202, 199, 199);
 }
+
+#map {
+    height: 100%;
+  }
+  /* Optional: Makes the sample page fill the window. */
+  html, body {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+  }
+
+  h5 {
+      font-size : 18px;
+      text-align: center;
+  }
+
+  .well {
+      background-color: rgb(221, 231, 216);
+  }
+
+  button {
+      background-color: blanchedalmond;
+      box-shadow: 3px 3px 5px grey;
+      font-size: 17px;
+      font-weight: bolder;
+      border-radius: 5px;
+  }
