Revise href so everything can connect together

--- a/Electric_Charging_Stations/templates/index.html
+++ b/Electric_Charging_Stations/templates/index.html
@@ -13,20 +13,20 @@
 
     <body>
         <nav class="navbar navbar-expand-lg"> <!--navigation bar-->
-            <a class="navbar-brand" href="index.html">GreenCharging</a>
+            <a class="navbar-brand" href="/">GreenCharging</a>
             <button class="navbar-toggler custom-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item active">
-                        <a class="nav-link" href="add.html">Add a New Location</a>
+                        <a class="nav-link" href="/add">Add a New Location</a>
                     </li>
                     <li class="nav-item active">
-                        <a class="nav-link" onclick="getLocation()" href="search.html">Search Nearby</a>
+                        <a class="nav-link" href="/search">Search Nearby</a>
                     </li>
                     <li class="nav-item active">
-                        <a class="nav-link" href="login.html">LOGIN</a>
+                        <a class="nav-link" href="/login">LOGIN</a>
                     </li>
                 </ul>
             </div>
