--- a/Electric_Charging_Stations/templates/Add.html
+++ b/Electric_Charging_Stations/templates/Add.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
 
 <head>
-  <title>Green Charging</title>
+  <title>Add a New Station</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
@@ -14,20 +14,20 @@
 
 <body>
   <nav class="navbar navbar-expand-lg"> <!--navigation bar-->
-    <a class="navbar-brand" href="index.html">GreenCharging</a>
+    <a class="navbar-brand" href="/">GreenCharging</a>
     <button class="navbar-toggler custom-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-                <a class="nav-link" href="add.html">Add a New Location</a>
+                <a class="nav-link" href="/add">Add a New Location</a>
             </li>
             <li class="nav-item active">
                 <a class="nav-link" href="/search">Search Nearby</a>
             </li>
             <li class="nav-item active">
-                <a class="nav-link" href="login.html">LOGIN</a>
+                <a class="nav-link" href="/login">LOGIN</a>
             </li>
         </ul>
     </div>
