--- a/Electric_Charging_Stations/templates/search.html
+++ b/Electric_Charging_Stations/templates/search.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-us">
   <head>
-    <title>Green Charging</title>
+    <title>Search Stations Nearby</title>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
     <meta charset="utf-8">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -15,20 +15,20 @@
   </head>
   <body>
   <nav class="navbar navbar-expand-lg"> <!--navigation bar-->
-    <a class="navbar-brand" href="index.html">GreenCharging</a>
+    <a class="navbar-brand" href="/">GreenCharging</a>
     <button class="navbar-toggler custom-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-                <a class="nav-link" href="add.html">Add a New Location</a>
+                <a class="nav-link" href="/add">Add a New Location</a>
             </li>
             <li class="nav-item active">
                 <a class="nav-link" href="/search">Search Nearby</a>
             </li>
             <li class="nav-item active">
-                <a class="nav-link" href="login.html">LOGIN</a>
+                <a class="nav-link" href="/login">LOGIN</a>
             </li>
         </ul>
       </div>
