--- a/Electric_Charging_Stations/static/css/login.css
+++ b/Electric_Charging_Stations/static/css/login.css
@@ -1,5 +1,5 @@
 body {
-    background-image : url("../../assets/img/background.jpg");
+    background-image : url("../img/background.jpg");
     height : 100vh;
     background-size : cover;
     background-position : center
