--- a/Electric_Charging_Stations/templates/index.html
+++ b/Electric_Charging_Stations/templates/index.html
@@ -40,7 +40,7 @@
                     
                     <hr class="my-4">
                     <div class = "img" style="max-width : 1500px">
-                        <img class = "center-fit" src= "../assets/img/homepage_img.jpg">
+                        <img class = "center-fit" src= "../static/img/homepage_img.jpg">
                     </div> 
                     <div class="text">
                         <p>
@@ -65,8 +65,8 @@
                     <hr class="my-4">
                     <div class = "images">
                         <ul>
-                            <li><a href="../assets/img/power_types.png" target = "_blank">Power Levels</a></li>
-                            <li><a href="../assets/img/plug_types.png" target = "_blank">Connection Types</a></li>
+                            <li><a href="../static/img/power_types.png" target = "_blank">Power Levels</a></li>
+                            <li><a href="../static/img/plug_types.png" target = "_blank">Connection Types</a></li>
                         </ul>
                     </div>
                     <div id= "bar"></div>
