--- a/Electric_Charging_Stations/templates/search.html
+++ b/Electric_Charging_Stations/templates/search.html
@@ -62,9 +62,9 @@
     </div>
   </div>
     <div id="map"></div>
-    <script type="text/javascript" src="static/js/config.js"></script>
-    <script type="text/javascript" src="static/js/logic_filter.js"></script>
-    <script src="../static/css/getlocation.js"></script>
+    <script type="text/javascript" src="../static/js/config.js"></script>
+    <script type="text/javascript" src="../static/js/logic_filter.js"></script>
+    <script src="../static/js/getlocation.js"></script>
 
   </body>
 </html>
