--- a/Electric_Charging_Stations/templates/search.html
+++ b/Electric_Charging_Stations/templates/search.html
@@ -63,7 +63,8 @@
   </div>
     <div id="map"></div>
     <script type="text/javascript" src="../static/js/config.js"></script>
-    <script type="text/javascript" src="../static/js/logic_filter.js"></script>
+    <script type="text/javascript" src="../static/js/search.js"></script>
+    <!-- <script type="text/javascript" src="../static/js/logic_filter.js"></script> -->
     <script src="../static/js/getlocation.js"></script>
 
   </body>
