--- a/Electric_Charging_Stations/static/css/index.css
+++ b/Electric_Charging_Stations/static/css/index.css
@@ -61,3 +61,9 @@ li {
     font-family: "Impact", Charcoal, sans-serif;
     color : black;
 }
+
+.svg-container {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
