Deleted assets folder, add more css, modified html

--- a/Electric_Charging_Stations/templates/index.html
+++ b/Electric_Charging_Stations/templates/index.html
@@ -40,7 +40,7 @@
                     
                     <hr class="my-4">
                     <div class = "img" style="max-width : 1500px">
-                        <img class = "center-fit" src= "../assets/img/homepage_img.jpg">
+                        <img class = "center-fit" src= "../static/img/homepage_img.jpg">
                     </div> 
                     <div class="text">
                         <p>
@@ -65,18 +65,19 @@
                     <hr class="my-4">
                     <div class = "images">
                         <ul>
-                            <li><a href="../assets/img/power_types.png" target = "_blank">Power Levels</a></li>
-                            <li><a href="../assets/img/plug_types.png" target = "_blank">Connection Types</a></li>
+                            <li><a href="../static/img/power_types.png" target = "_blank">Power Levels</a></li>
+                            <li><a href="../static/img/plug_types.png" target = "_blank">Connection Types</a></li>
                         </ul>
                     </div>
                     <div id= "bar"></div>
+                    <hr>
                     <div id= "pie"></div>
                 </div>
             </div>
         </div>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.js"></script>
         <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-        <script src="static/js/bar.js"></script>
-        <script src="static/js/pie.js"></script>
+        <script src="../static/js/bar.js"></script>
+        <script src="../static/js/pie.js"></script>
     </body>
 </html
