--- a/Electric_Charging_Stations/static/css/search.css
+++ b/Electric_Charging_Stations/static/css/search.css
@@ -19,6 +19,8 @@ body {
 
   .well {
       background-color: rgb(221, 231, 216);
+      margin-bottom: 150px;
+      
   }
 
   button {
@@ -28,3 +30,8 @@ body {
       font-weight: bolder;
       border-radius: 5px;
   }
+
+  .map-container {
+      height: 600px;
+  }
+
