--- a/Electric_Charging_Stations/templates/search.html
+++ b/Electric_Charging_Stations/templates/search.html
@@ -9,6 +9,15 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.js"></script>
+      <!-- Leaflet CSS and JS -->
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.3/dist/leaflet.css"
+    integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ=="
+    crossorigin=""/>
+    <script src="https://unpkg.com/leaflet@1.3.3/dist/leaflet.js"
+    integrity="sha512-tAGcCfR4Sc5ZP5ZoVz0quoZDYX5aCtEm/eu1KhSLj2c9eFrylXZknQYmxUssFaVJKvvc0dJQixhGjG2yXWiV9Q=="
+    crossorigin=""></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet.markercluster/1.4.1/leaflet.markercluster.js"></script>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet.markercluster/1.4.1/MarkerCluster.css"></script> -->
     <link rel="stylesheet" type="text/css" href="../static/css/navbar.css">
     <link rel="stylesheet" type="text/css" href="../static/css/search.css">
     <link rel="stylesheet" type="text/css" href="../static/css/media.css">
@@ -39,19 +48,17 @@
         <p>Please select the connection type and charging level below</p>
     </div>
   </div>
-  <div class="container">
+  <div class="container map-container">
     <div class="row">
       <div class="col-lg-2 col-md-2 col-sm-12">
         <div class="well">
           <h5>Connection Types</h5>
-          <select id="selTypes" onchange="optionChanged(this.value)"></select>
+          <select id="selTypes" name = "type_select"></select>
         </div>
-        <hr>
         <div class="well">
           <h5>Charging Levels</h5>
-          <select id="selLevels" onchange="optionChanged(this.value)"></select>
+          <select id="selLevels" name = "level_select"></select>
         </div>
-        <hr>
         <div>
           <button onclick="getLocation()"> Find Stations Near Me</button>
         </div>
@@ -61,10 +68,11 @@
       </div>
     </div>
   </div>
-    <div id="map"></div>
-    <script type="text/javascript" src="static/js/config.js"></script>
-    <script type="text/javascript" src="static/js/logic_filter.js"></script>
-    <script src="../static/css/getlocation.js"></script>
+    <script type="text/javascript" src="../static/js/config.js"></script>
+    <script type="text/javascript" src="../static/js/search.js"></script>
+    <script type="text/javascript" src="../static/js/logic_filter_to_Vince.js"></script>
+    <!-- <script type="text/javascript" src="../static/js/getlocation.js"></script> -->
+
 
   </body>
 </html>
