--- a/Electric_Charging_Stations/templates/search_new.html
+++ b/Electric_Charging_Stations/templates/search_new.html
@@ -56,35 +56,22 @@
   </div>
   <div class="container map-container">
     <div class="row">
-      
-      
-        
+      <div class="col-lg-6 col-sm-6 col-sm-12">
         <select id="selDataset">
             <option value="Level 1 : Low (Under 2kW)">Level 1 : Low (Under 2kW)</option>
             <option value="Level 2 : Medium (Over 2kW)">Level 2 : Medium (Over 2kW)</option>
             <option value="Level 3:  High (Over 40kW)">Level 3:  High (Over 40kW)</option>
         </select>
-        
-        <button id="submit" type="submit" class="btn btn-default">Search Your Location</button>
-
-      
+      </div> 
+      <div class="col-lg-6 col-sm-6 col-sm-12">
+        <button id="submit" type="submit">Find Stations Near Me</button>
       </div>
-      
-      
-      
-        <div id="map">
-          <script type="text/javascript" src="../static/js/config.js"></script>
-          <script type="text/javascript" src="../static/js/logic_search_by.js"></script>
-        </div>
-      </div>
-
-
-
     </div>
+    <div id="map"></div>
   </div>
 
-    
 
-
+  <script type="text/javascript" src="../static/js/config.js"></script>
+  <script type="text/javascript" src="../static/js/final_filter.js"></script>
   </body>
 </html>
