Minor revision of the text shown in search page

--- a/Electric_Charging_Stations/templates/search_new.html
+++ b/Electric_Charging_Stations/templates/search_new.html
@@ -51,7 +51,7 @@
   <div class="container">
     <div class="jumbotron" style="text-align: center">
         <h1>Search Stations Nearby</h1>
-        <p>Please select the connection type and charging level below</p>
+        <p>Please select the connection type</p>
     </div>
   </div>
   <div class="container map-container">
