Edited a location form

--- a/Electric_Charging_Stations/templates/Add.html
+++ b/Electric_Charging_Stations/templates/Add.html
@@ -75,8 +75,8 @@
             </div>
 
             <div class="form-group">
-            <label for="levelID"><strong>Connection Type</strong></label>
-            <input type="text" class="form-control" id="levelID" name="Level" placeholder="1, 2 or 3">
+            <label for="levelID"><strong>Connection Level</strong></label>
+            <input type="text" class="form-control" id="levelID" name="Level" placeholder="Level 3: High (Over40KW)">
             </div>
 
             <input type="submit" value="submit" class="btn btn-default">
