Added form of level id

--- a/Electric_Charging_Stations/templates/Add.html
+++ b/Electric_Charging_Stations/templates/Add.html
@@ -75,7 +75,12 @@
             </div>
 
             <div class="form-group">
-            <label for="levelID"><strong>Connection Level</strong></label>
+              <label for="address"><strong>Level ID</strong></label>
+              <input type="text" class="form-control" id="levelid" name="ID" placeholder="1, 2 or 3">
+            </div>
+
+            <div class="form-group">
+            <label for="levelID"><strong>Level Title</strong></label>
             <input type="text" class="form-control" id="levelID" name="Level" placeholder="Level 3: High (Over40KW)">
             </div>
 
